@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	6.5 (gritter) 3/3/06";
+	"@(#)/usr/ucb/otfdump.sl	6.6 (gritter) 3/3/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  6.5 (gritter) 3/3/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 6.5 (gritter) 3/3/06";
+static const char sccsid[] USED = "@(#)dpost.sl  6.6 (gritter) 3/3/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 6.6 (gritter) 3/3/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.5 (gritter) 3/3/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.6 (gritter) 3/3/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.5 (gritter) 3/3/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.6 (gritter) 3/3/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "6.5";
+const char revision[] = "6.6";
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
@@ -24,32 +24,32 @@ ext.h: * Sccsid @(#)ext.h	1.37 (gritter) 2/19/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 mallint.h: * Sccsid @(#)mallint.h	1.4 (gritter) 8/27/05
 malloc.c: * Sccsid @(#)malloc.c	1.3 (gritter) 8/26/05
-n1.c: * Sccsid @(#)n1.c	1.63 (gritter) 2/17/06
+n1.c: * Sccsid @(#)n1.c	1.64 (gritter) 3/3/06
 n2.c: * Sccsid @(#)n2.c	1.14 (gritter) 12/19/05
 n3.c: * Sccsid @(#)n3.c	1.73 (gritter) 2/17/06
-n4.c: * Sccsid @(#)n4.c	1.23 (gritter) 2/26/06
-n5.c: * Sccsid @(#)n5.c	1.37 (gritter) 2/26/06
+n4.c: * Sccsid @(#)n4.c	1.24 (gritter) 3/3/06
+n5.c: * Sccsid @(#)n5.c	1.38 (gritter) 3/3/06
 n7.c: * Sccsid @(#)n7.c	1.43 (gritter) 2/19/06
 n8.c: * Sccsid @(#)n8.c	1.19 (gritter) 2/19/06
-n9.c: * Sccsid @(#)n9.c	1.37 (gritter) 2/13/06
+n9.c: * Sccsid @(#)n9.c	1.38 (gritter) 3/3/06
 ni.c: * Sccsid @(#)ni.c	1.20 (gritter) 3/3/06
 nii.c: * Sccsid @(#)nii.c	1.24 (gritter) 2/19/06
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
 tdef.h: * Sccsid @(#)tdef.h	1.68 (gritter) 2/19/06
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.22 (gritter) 2/5/06
-nroff.d/n6.c: * Sccsid @(#)n6.c	1.28 (gritter) 2/17/06
-nroff.d/proto.h: * Sccsid @(#)proto.h	1.29 (gritter) 2/17/06
+nroff.d/n6.c: * Sccsid @(#)n6.c	1.29 (gritter) 3/3/06
+nroff.d/proto.h: * Sccsid @(#)proto.h	1.30 (gritter) 3/3/06
 nroff.d/tw.h: * Sccsid @(#)tw.h	1.5 (gritter) 9/8/05
-troff.d/afm.c: * Sccsid @(#)afm.c	1.44 (gritter) 2/17/06
-troff.d/afm.h: * Sccsid @(#)afm.h	1.24 (gritter) 2/17/06
+troff.d/afm.c: * Sccsid @(#)afm.c	1.45 (gritter) 3/3/06
+troff.d/afm.h: * Sccsid @(#)afm.h	1.25 (gritter) 3/3/06
 troff.d/dev.h: * Sccsid @(#)dev.h	1.9 (gritter) 12/6/05
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.11 (gritter) 12/6/05
-troff.d/otf.c: * Sccsid @(#)otf.c	1.39 (gritter) 2/17/06
+troff.d/otf.c: * Sccsid @(#)otf.c	1.40 (gritter) 3/3/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.11 (gritter) 12/20/05
-troff.d/proto.h: * Sccsid @(#)proto.h	1.37 (gritter) 2/17/06
+troff.d/proto.h: * Sccsid @(#)proto.h	1.38 (gritter) 3/3/06
 troff.d/t10.c: * Sccsid @(#)t10.c	1.63 (gritter) 2/13/06
-troff.d/t6.c: * Sccsid @(#)t6.c	1.123 (gritter) 2/21/06
+troff.d/t6.c: * Sccsid @(#)t6.c	1.124 (gritter) 3/3/06
 troff.d/troff.h: * Sccsid @(#)troff.h	1.21 (gritter) 2/5/06
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.13 (gritter) 2/16/06
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.2 (gritter) 12/22/05
